fix: added interactions endpoints to spec
